rest/logs-deployment.yaml
##
## You provide this
##
apiVersion: apps/v1
kind: Deployment
metadata:
    name: logs
spec:
    selector:
        matchLabels:
            app: logs
    replicas: 1
    template:
        metadata:
            labels:
                app: logs
        spec:
            containers:
            - name: logs
              image: gcr.io/datacenter-292201/logs:latest
              resources:
                  requests:
                    cpu: 100m
                    memory: 400Mi
              ports:
              - containerPort: 5002                     
---
