rest/rest-deployment.yaml
##
## You provide this
##

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest
spec:
  selector:
    matchLabels:
      app: rest
  replicas: 1
  template:
    metadata:
      labels:
        app: rest
    spec:
      containers:
      - name: rest
        image: gcr.io/datacenter-292201/rest:latest
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
        ports:
        - containerPort: 5000
---
