rest/rest-service.yaml
##
## You provide this
##

apiVersion: v1
kind: Service
metadata:
    name: rest
    labels:
        app: rest
spec:
    type: NodePort
    selector:
        app: rest
    ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
